--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
   --darkGrey: #808080;
   --black: #000000;
   --red: #ff0000;
-  --blue: #0062b2;
+  --blue: #0290ff;
   --orange: #ff9f1a;
   --green: #05d69e;
 }
