--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -1,11 +1,10 @@
 form {
   width: 100%;
   height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: flex; 
+  align-items: flex-start;
   justify-content: space-evenly;
-  padding: 1rem;
+  gap: 8px;
 }
 form input {
   width: 100%;
@@ -15,29 +14,33 @@ form input {
   outline: none;
   border: none;
   border-radius: 5px;
-  border-bottom: 1px solid grey;
-  background-color: #f0f8ff;
+  background-color: var(--grey);
   user-select: none;
-  color: aliceblue;
-  margin-bottom: 0.5rem;
+  color: var(--black);
+  
 }
 input[type='text']:focus {
-  background-color: #151515;
+  background-color: var(--blue);
+  color: var(--white);
 }
 form input[type='submit'] {
-  color: #181a1b;
+  color: var(--black);
   width: 100%;
+  padding: 8px 16px;
   font-size: 1rem;
-  padding: 0;
-  border-bottom-color: #11cc55;
   border: none;
   cursor: pointer;
   transition: all 0.2s ease-in-out;
-  background-color: #f0f8ff;
+  background-color: var(--green);
 }
 form input[type='submit']:hover {
-  border: solid 1px #11cc55;
+  background-color: var(--blue);
+  color: var(--white);
+}
+.wrapper-input{
+  position: relative;
 }
 form p {
   color: red;
+  position: absolute;
 }
