--- a/src/components/Record/Record.css
+++ b/src/components/Record/Record.css
@@ -6,6 +6,20 @@
   padding: 0 32px;
   margin-bottom: 16px;
 }
+.record-info button{
+  padding: 2px 4px;
+  background-color: var(--red);
+  color: var(--white);
+  border: none;
+  border-radius: 2px;
+  cursor: pointer;
+  box-shadow: 1px 1px 5px rgba(0, 0,0,0.5);
+  transition: all .2s ease;
+}
+.record-info button:hover{
+  transform: scale(1.05);
+  box-shadow: 2px 2px 7px rgba(0, 0,0,0.5);
+}
 .record .text-circle{
   display: flex;
   align-items: center;
