--- a/src/pages/Categories/Categories.css
+++ b/src/pages/Categories/Categories.css
@@ -1,4 +1,16 @@
-.categories{
-  height: 100vh;
-  padding: 100px;
+
+.home h1{
+  text-align: center;
+  font-weight: 500;
+}
+.home .select{
+  display: flex;
+  justify-content: space-evenly;
+  overflow-y: auto;
+}
+.home .select button{
+  margin-bottom: 16px;
+  padding: 8px 16px;
+  font-size: 1.1rem;
+  cursor: pointer;
 }
