--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -2,6 +2,7 @@ form {
   width: 100%;
   height: 100%;
   display: flex; 
+  flex-wrap: wrap;
   align-items: flex-start;
   justify-content: space-evenly;
   gap: 8px;
