--- a/src/components/Record/Record.css
+++ b/src/components/Record/Record.css
@@ -1,5 +1,6 @@
 .record{
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
@@ -22,7 +23,9 @@
 }
 .record .text-circle{
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
+  margin: 8px 0;
 }
 .record .circle{
   width: 70px;
@@ -44,4 +47,12 @@
 }
 .record .current-page input{
   height: 30px;
+}
+@media (max-width:1000px) {
+  .record{
+    padding:  8px;
+  }
+  .record .current-page{
+    width: 180px;
+  }
 }
