--- a/src/components/Record/Record.css
+++ b/src/components/Record/Record.css
@@ -1,4 +1,4 @@
-.record{
+.record {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -7,27 +7,27 @@
   padding: 0 32px;
   margin-bottom: 16px;
 }
-.record-info button{
+.record-info button {
   padding: 2px 4px;
   background-color: var(--red);
   color: var(--white);
   border: none;
   border-radius: 2px;
   cursor: pointer;
-  box-shadow: 1px 1px 5px rgba(0, 0,0,0.5);
-  transition: all .2s ease;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
+  transition: all 0.2s ease;
 }
-.record-info button:hover{
+.record-info button:hover {
   transform: scale(1.05);
-  box-shadow: 2px 2px 7px rgba(0, 0,0,0.5);
+  box-shadow: 2px 2px 7px rgba(0, 0, 0, 0.5);
 }
-.record .text-circle{
+.record .text-circle {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   margin: 8px 0;
 }
-.record .circle{
+.record .circle {
   width: 70px;
   height: 70px;
   display: flex;
@@ -35,24 +35,24 @@
   justify-content: center;
   margin-right: 16px;
 }
-.record .progress{
+.record .progress {
   stroke: var(--blue);
 }
-.record .current-page{
+.record .current-page {
   width: 25%;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
   padding: 16px 0;
 }
-.record .current-page input{
+.record .current-page input {
   height: 30px;
 }
-@media (max-width:1000px) {
-  .record{
-    padding:  8px;
+@media (max-width: 1000px) {
+  .record {
+    padding: 8px;
   }
-  .record .current-page{
+  .record .current-page {
     width: 180px;
   }
 }
